Enhancement: Adds 'Basic' context menu entry for User element which is default for double click and fixes invisible action icon

--- a/structr-ui/src/main/resources/structr/css/main.css
+++ b/structr-ui/src/main/resources/structr/css/main.css
@@ -1391,6 +1391,7 @@ i.link_icon {
 	right: .5rem;
 	top: .4rem;
 	vertical-align: top;
+	height: 1rem;
 }
 
 .icons-container svg {
